--- a/secciones/Reserva.html
+++ b/secciones/Reserva.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<!--     etiquetas meta -->
+    <!--     etiquetas meta -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="En esta seccion podes hacer reservas en nuestros locales">
     <meta name="keywords" content="restaurante comida reservas">
-<!-- link favicon -->
+    <!-- link favicon -->
     <link rel="shortcut icon" href="../imagenes/logo.jpg" type="image/x-icon">
-<!-- Link bootstrap-->
+    <!-- Link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-<!-- Link de la tipografia -->
+    <!-- Link de la tipografia -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
-<!-- Etiquetas de linkeo a Css propio -->
+    <!-- Etiquetas de linkeo a Css propio -->
     <link rel="stylesheet" href="../estilos/estilo.css">
-<!-- titulo -->
+    <!-- titulo -->
     <title>Reserva</title>
 </head>
+
 <body>
     <header>
         <!--     encabezado -->
@@ -63,73 +65,71 @@
 
 
     </header>
-<!--inicio del main-->
-<main>
-    <div class="container-fluid reserva-titulo">
-        <h2>Seccion de reservas</h2>
-    </div>
-    <div class="container-fluid col-sm-8 reserva-formulario-contenedor">
-        <form>
-            <div class="mb-3">
-                <label for="reserva-nombre" class="form-label">Nombre</label>
-                <input type="Nombre" class="form-control" id="reserva-nombre" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">A nombre de quien va a estar hecha la reserva</div>
-              </div>
-            <div class="mb-3">
-              <label for="reserva-email" class="form-label">Email</label>
-              <input type="text" class="form-control" id="reserva-email" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">No compartiremos esta informacion con nadie mas</div>
-            </div>
-            <select id="reserva-sucursal" class="form-select form-select-sm" aria-label=".form-select-sm example">
-                <option selected>Elegi la sucursal en la cual deseas reservar</option>
-                <option value="1">Primera Sucursal</option>
-                <option value="2">Segunda Sucursal</option>
-              </select>
-              <select id="reserva-cantidad" class="form-select form-select-sm" aria-label=".form-select-sm example">
-                <option selected>Indicanos la cantidad de personas</option>
-                <option value="1">Una</option>
-                <option value="2">Dos</option>
-                <option value="3">Tres</option>
-                <option value="4">Cuatro</option>
-                <option value="5">Cinco</option>
+    <!--inicio del main-->
+    <main>
+        <div class="container-fluid reserva-titulo">
+            <h2>Seccion de reservas</h2>
+        </div>
+        <div class="container-fluid col-sm-8 reserva-formulario-contenedor">
+            <form id="reserva-formulario">
+                <div class="mb-3">
+                    <label for="reserva-nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="reserva-nombre" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">A nombre de quien va a estar hecha la reserva</div>
+                </div>
+                <div class="mb-3">
+                    <label for="reserva-email" class="form-label">Email</label>
+                    <input type="text" class="form-control" id="reserva-email" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">No compartiremos esta informacion con nadie mas</div>
+                </div>
+                <select id="reserva-sucursal" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                    <option selected>Elegi la sucursal en la cual deseas reservar</option>
+                    <option value="1">Primera Sucursal</option>
+                    <option value="2">Segunda Sucursal</option>
+                </select>
+                <select id="reserva-cantidad" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                    <option selected>Indicanos la cantidad de personas</option>
+                    <option value="1">Una</option>
+                    <option value="2">Dos</option>
+                    <option value="3">Tres</option>
+                    <option value="4">Cuatro</option>
+                    <option value="5">Cinco</option>
 
-              </select>
-              <select id="reserva-dia" class="form-select form-select-sm mb-3" aria-label=".form-select-lg example">
-                <option selected>Dia</option>
-                <option value="Lunes">Lunes</option>
-                <option value="Martes">Martes</option>
-                <option value="Miercoles">Miercoles</option>
-                <option value="Jueves">Jueves</option>
-                <option value="Viernes">Viernes</option>
-                <option value="Sabado">Sabado</option>
-                <option value="Domingo">Domingo</option>
-              </select>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Captcha</label>
-            </div>
-            <button type="submit" onclick="pedirDatos()" class="btn boton">Enviar</button>
-          </form>
-    </div>
-    <div id="reservas-hechas"></div>
+                </select>
+                <select id="reserva-dia" class="form-select form-select-sm mb-3" aria-label=".form-select-lg example">
+                    <option selected>Dia</option>
+                    <option value="Lunes">Lunes</option>
+                    <option value="Martes">Martes</option>
+                    <option value="Miercoles">Miercoles</option>
+                    <option value="Jueves">Jueves</option>
+                    <option value="Viernes">Viernes</option>
+                    <option value="Sabado">Sabado</option>
+                    <option value="Domingo">Domingo</option>
+                </select>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Captcha</label>
+                </div>
+                <button type="submit" class="btn boton">Enviar</button>
+            </form>
+        </div>
+        <div id="reservas-hechas"></div>
+
+    </main>
+
+    <!--fin del main-->
+
+    <!--inicio del footer-->
+    <footer>
+        <!-- Redes Sociales -->
+        <h4>Nuestras redes sociales</h4>
+        <div class="red1"><a href="#"></a>Facebook</div>
+        <div class="red2"><a href="#"></a>Twitter</div>
+        <div class="red3"><a href="#"></a>Instagram</div>
+    </footer>
+    <!--fin del footer-->
 
 
-</main>
-
-<!--fin del main-->
-
-<!--inicio del footer-->
-<footer>
-    <!-- Redes Sociales -->
-    <h4>Nuestras redes sociales</h4>
-    <div class="red1"><a href="#"></a>Facebook</div>
-    <div class="red2"><a href="#"></a>Twitter</div>
-    <div class="red3"><a href="#"></a>Instagram</div>
-</footer>
-<!--fin del footer-->
-
-<!--     scripts de javascript -->
-    <script src="../js/app.js"></script>
     <!--     scripts de bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -140,5 +140,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+    <!--     scripts de javascript -->
+    <script src="../js/app.js"></script>
 </body>
+
 </html>
